# c_in_practice

./: .gitignore  CMakeLists.txt  Makefile  README.md  common.mk  config.mk
.github/workflows/: cmake.yml
doc/: solid.md  the_23_design_patterns.md
legacy_makefiles/: Makefile  config.mk
make_helper/: helpers.mk
src/: CMakeLists.txt  main.c
src/alg/: Makefile  recursive.c
src/algorithm/: CMakeLists.txt  k_mins.cc
src/algorithm/leetcode/: CMakeLists.txt  leetcode.h
src/algorithm/leetcode/binary_search/: 367.cc  374.cc  441.cc  744.cc  lc069.cc
src/algorithm/leetcode/hashmap/: lc001.cc  lc141.cc  lc350.cc
src/compiler/: CMakeLists.txt  main.c  weak.c
src/data_structure/: CMakeLists.txt
src/demo/: reg_var.c
src/design_pattern/: CMakeLists.txt  Makefile  abstract_factory.c  adapter.c  benz_factory.c  bridge.c  builder.c  chain_responsibility.c  command.c  composite.c  decorator.c  dod.c  facade.c  factory_app.c  factory_method.c  interpreter.c  iterator.c  main.c  mediator.c  memento.c  observer.c  porsche_builder.c  porsche_factory.c  prototype.c  proxy.c  singleton.c  state.c  strategy.c  template_method.c  visitor.c
src/design_pattern/inc/: adapter.h  builder.h  factory.h  factory_method.h  log.h  singleton.h
src/ds/: Makefile  binary_tree.cpp  generic.c
src/primitive/: CMakeLists.txt  con_counter.c  reg_var.c
src/sys/: CMakeLists.txt  dlmalloc.c  dlmalloc.h  semaphore.c  test_malloc.c
test/: CMakeLists.txt
test/cases/: test_algorithm.cc  test_leetcode.cc
